Perkin-UAT/force-app/main/default/objects/Junction_Technical_Contact__c/Junction_Technical_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction Technical Contact (Source: S-692579)</description>
    <label>Junction Technical Contact</label>
    <nameField>
        <displayFormat>Junctiontechcontact-{00000}</displayFormat>
        <label>Junction technical contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junction Technical Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>