Perkin-UAT/force-app/main/default/objects/Junction_Technical_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact Master-Detail (Source: S-692579)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technicals</relationshipLabel>
    <relationshipName>Junction_technical_contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>