Perkin-UAT/force-app/main/default/objects/Junction_Technical_Contact__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Principal (Source: S-692579)</description>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>