Perkin-UAT/force-app/main/default/objects/Junction_Technical_Contact__c/fields/Technical_Role__c.field-meta.xml
<CustomField>
    <fullName>Technical_Role__c</fullName>
    <description>Technical Role (Source: S-692579)</description>
    <label>Technical Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical expert</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Decision maker</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>